--- a/language-detector/pom.xml
+++ b/language-detector/pom.xml
@@ -17,8 +17,8 @@
 	<description>language-detector detects the language of text.</description>
 	<inceptionYear>2017</inceptionYear>
 	<organization>
-		<name>Mountain Fog, Inc.</name>
-		<url>http://www.mtnfog.com</url>
+		<name>UpslopeNLP</name>
+		<url>http://www.upslopenlp.com</url>
 	</organization>
 	<scm>
 		<connection>scm:git@github.com:upslopenlp/nlp-building-blocks.git</connection>
@@ -73,36 +73,6 @@
 				<configuration>
 					<release>11</release>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<skipTests>${skipTests}</skipTests>
-					<argLine>${surefireArgLine}</argLine>
-					<excludes>
-						<exclude>**/*IT.java</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<configuration>
-					<skipTests>${skipTests}</skipTests>
-					<includes>
-						<include>**/*IT.java</include>
-					</includes>
-				</configuration>
-				<executions>
-					<execution>
-						<id>failsafe-integration-tests</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
