--- a/language-detector/pom.xml
+++ b/language-detector/pom.xml
@@ -4,9 +4,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.2</version>
+		<groupId>com.upslopenlp</groupId>
+		<artifactId>nlpbb</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>language-detector</artifactId>
 	<groupId>com.upslopenlp</groupId>
@@ -15,65 +15,10 @@
 	<name>language-detector</name>
 	<url>http://www.upslopenlp.com</url>
 	<description>language-detector detects the language of text.</description>
-	<inceptionYear>2017</inceptionYear>
-	<organization>
-		<name>UpslopeNLP</name>
-		<url>http://www.upslopenlp.com</url>
-	</organization>
-	<scm>
-		<connection>scm:git@github.com:upslopenlp/nlp-building-blocks.git</connection>
-		<developerConnection>scm:git@github.com:upslopenlp/nlp-building-blocks.git</developerConnection>
-		<url>https://github.com/upslopenlp/nlp-building-blocks</url>
-	</scm>
-	<developers>
-		<developer>
-			<name>Mountain Fog</name>
-			<email>support@mtnfog.com</email>
-			<organization>Mountain Fog</organization>
-			<organizationUrl>http://www.mtnfog.com</organizationUrl>
-		</developer>
-	</developers>
-	<licenses>
-		<license>
-			<name>Apache License, version 2</name>
-			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
-			<distribution>manual</distribution>
-		</license>
-	</licenses>
 	<modules>
 		<module>language-detector-app</module>
 		<module>language-detector-model</module>
 		<module>language-detector-api</module>
 		<module>language-detector-services</module>
 	</modules>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<!-- Import dependency management from Spring Boot -->
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>${spring.boot.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.release>11</maven.compiler.release>
-		<log4j2.version>2.18.0</log4j2.version>
-		<opennlp.version>2.0.0</opennlp.version>
-		<spring.boot.version>2.7.2</spring.boot.version>
-	</properties>
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<release>11</release>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
