--- a/sentence-detector/pom.xml
+++ b/sentence-detector/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.2</version>
+		<groupId>com.upslopenlp</groupId>
+		<artifactId>nlpbb</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>sentence-detector</artifactId>
 	<groupId>com.upslopenlp</groupId>
@@ -44,38 +44,4 @@
 		<module>sentence-detector-api</module>
 		<module>sentence-detector-services</module>
 	</modules>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>${spring.boot.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.release>11</maven.compiler.release>
-		<commons.cli.version>1.4</commons.cli.version>
-		<commons.collections.version>4.4</commons.collections.version>
-		<commons.io.version>2.5</commons.io.version>
-		<commons.lang.version>3.6</commons.lang.version>
-		<log4j2.version>2.18.0</log4j2.version>
-		<mockito.version>4.6.1</mockito.version>
-		<opennlp.version>2.0.0</opennlp.version>
-		<spring.boot.version>2.7.2</spring.boot.version>
-	</properties>
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<target>11</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
