--- a/ner/ner-model/pom.xml
+++ b/ner/ner-model/pom.xml
@@ -22,6 +22,11 @@
 			<version>${commons.lang.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.neovisionaries</groupId>
+			<artifactId>nv-i18n</artifactId>
+			<version>1.29</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
