Updating name references.

--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
 	<developers>
 		<developer>
 			<name>Mountain Fog</name>
-			<email>support@mtnfog.com</email>
+			<email>support@upslopenlp.com</email>
 			<organization>Mountain Fog</organization>
-			<organizationUrl>http://www.mtnfog.com</organizationUrl>
+			<organizationUrl>http://www.upslopenlp.com</organizationUrl>
 		</developer>
 	</developers>
 	<licenses>
