--- a/ner/ner-api/pom.xml
+++ b/ner/ner-api/pom.xml
@@ -5,7 +5,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.mtnfog.idyl.e3</groupId>
+		<groupId>com.upslopenlp.idyl.e3</groupId>
 		<artifactId>ner</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
@@ -27,7 +27,7 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>com.mtnfog.idyl.e3</groupId>
+			<groupId>com.upslopenlp.idyl.e3</groupId>
 			<artifactId>ner-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
