--- a/ner/ner-app/pom.xml
+++ b/ner/ner-app/pom.xml
@@ -19,7 +19,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.mtnfog.idyl.e3</groupId>
+		<groupId>com.upslopenlp.idyl.e3</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 		<artifactId>ner</artifactId>
 	</parent>
@@ -117,12 +117,12 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>com.mtnfog.idyl.e3</groupId>
+			<groupId>com.upslopenlp.idyl.e3</groupId>
 			<artifactId>ner-services</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.mtnfog.idyl.e3</groupId>
+			<groupId>com.upslopenlp.idyl.e3</groupId>
 			<artifactId>ner-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
