--- a/ner/ner-system-initializer/pom.xml
+++ b/ner/ner-system-initializer/pom.xml
@@ -4,7 +4,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.mtnfog.idyl.e3</groupId>
+		<groupId>com.upslopenlp.idyl.e3</groupId>
 		<artifactId>ner</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
@@ -12,7 +12,7 @@
 	<name>ner-system-initializer</name>
 	<dependencies>
 		<dependency>
-			<groupId>com.mtnfog.idyl.e3</groupId>
+			<groupId>com.upslopenlp.idyl.e3</groupId>
 			<artifactId>ner-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
