--- a/ner/pom.xml
+++ b/ner/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>ner</artifactId>
-	<groupId>com.mtnfog.idyl.e3</groupId>
+	<groupId>com.upslopenlp.idyl.e3</groupId>
 	<packaging>pom</packaging>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>ner</name>
