--- a/sentence-detector/sentence-detector-api/pom.xml
+++ b/sentence-detector/sentence-detector-api/pom.xml
@@ -19,7 +19,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.mtnfog</groupId>
+		<groupId>com.upslopenlp</groupId>
 		<artifactId>prose</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
@@ -28,7 +28,7 @@
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
-			<groupId>com.mtnfog</groupId>
+			<groupId>com.upslopenlp</groupId>
 			<artifactId>sentence-detector-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -38,7 +38,7 @@
 			<version>${opennlp.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.mtnfog</groupId>
+			<groupId>com.upslopenlp</groupId>
 			<artifactId>sentence-detector-services</artifactId>
 			<version>${project.version}</version>
 		</dependency>
