--- a/sentence-detector/sentence-detector-services/pom.xml
+++ b/sentence-detector/sentence-detector-services/pom.xml
@@ -19,7 +19,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.mtnfog</groupId>
+		<groupId>com.upslopenlp</groupId>
 		<artifactId>prose</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
@@ -27,7 +27,7 @@
 	<name>sentence-detector-services</name>
 	<dependencies>
 		<dependency>
-			<groupId>com.mtnfog</groupId>
+			<groupId>com.upslopenlp</groupId>
 			<artifactId>sentence-detector-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
