--- a/tokenizer/pom.xml
+++ b/tokenizer/pom.xml
@@ -7,11 +7,11 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>tokenizer</artifactId>
-	<groupId>com.mtnfog</groupId>
+	<groupId>com.upslopenlp</groupId>
 	<packaging>pom</packaging>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>tokenizer</name>
-	<url>http://www.mtnfog.com</url>
+	<url>http://www.upslopenlp.com</url>
 	<description>tokenize input text.</description>
 	<modules>
 		<module>tokenizer-app</module>
