--- a/tokenizer/tokenizer-api/pom.xml
+++ b/tokenizer/tokenizer-api/pom.xml
@@ -19,7 +19,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.mtnfog</groupId>
+		<groupId>com.upslopenlp</groupId>
 		<artifactId>tokenizer</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
@@ -28,12 +28,12 @@
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
-			<groupId>com.mtnfog</groupId>
+			<groupId>com.upslopenlp</groupId>
 			<artifactId>tokenizer-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.mtnfog</groupId>
+			<groupId>com.upslopenlp</groupId>
 			<artifactId>tokenizer-services</artifactId>
 			<version>${project.version}</version>
 		</dependency>
