--- a/tokenizer/tokenizer-app/pom.xml
+++ b/tokenizer/tokenizer-app/pom.xml
@@ -17,7 +17,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.mtnfog</groupId>
+		<groupId>com.upslopenlp</groupId>
 		<artifactId>tokenizer</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
@@ -49,12 +49,12 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>com.mtnfog</groupId>
+			<groupId>com.upslopenlp</groupId>
 			<artifactId>tokenizer-model</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.mtnfog</groupId>
+			<groupId>com.upslopenlp</groupId>
 			<artifactId>tokenizer-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
