--- a/.gitignore
+++ b/.gitignore
@@ -4,18 +4,13 @@
 .settings/
 target/
 *.jar
-idyl-e3-*.zip
 *.log
-distribution/docs
-node_modules
 *.dat
-jmeter.log
 *.swp
-out-*.xml
-README.txt
 dependency-reduced-pom.xml
 *.asc
 .cache-main
 .cache-tests
 data/
 .idea/
+*.iml
